name:                ahoy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ahoy#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , ObjDb
                     , Obj
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , hedis
                     , mtl
                     , scientific >= 0.3
                     , servant-server
                     , text
                     , transformers
                     , unordered-containers
                     , wai
                     , warp
  default-language:    Haskell2010

executable ahoy
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ahoy
  default-language:    Haskell2010

test-suite ahoy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ahoy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ahoy
